Changes from jTDS 1.0.3
=======================

05/10/2005 - Alin Sinpalean
 o Applied Mike's patch [1197446] Optimized handling of datetime values.
 o Applied Mike's fix for bug [1197603] Cursor downgrade error in
   CachedResultSet and added a test case.

05/09/2005 - David Kilzer
 o Made the error.connection.autocommit message in ConnectionJDBC2 specific to
   the method being called (commit() or rollback()) by introducing a parameter.

05/06/2005 - Alin Sinpalean
 o Corrected bug [1195511] Recent change to JtdsStatement breaks Sybase
   metadata.

05/04/2005 - Alin Sinpalean
 o Corrected a bug that was causing the ResultSet position to be reset to the
   beginning of the cached block if a reread was attempted after updateRow().

04/28/2005 - Alin Sinpalean
 o Implemented caching of a single TdsCore instance in ConnectionJDBC2. When a
   statement is closed its TdsCore is cached and reused on the next statement
   creation.
 o Made a lot of properties final.
 o Corrected bug [1180777] collation-related execption on update - if a prepare
   failed, execution was not retried (unprepared) and failed.
 o Removed the ConnectionJDBC2 finalizer, as the resources will be freed anyway
   when garbage collected.

04/25/2005 - Alin Sinpalean
 o Applied Brett Wooldridge's patch for RFE [1172683] Improve the performance
   of Prepared Statements. The patch implements a cache for parsed SQL
   statements (parsed sql and parameter information, where available).

04/22/2005 - Alin Sinpalean
 o Corrected bug [1187872] Supported CodePage: error in error message.
 o Corrected bug [1187927] Driver Hangs on Statement.execute(). Versions 1.0.3
   and prior entered an infinite loop when parsing an unterminated multi-line
   comment.

04/20/2005 - Alin Sinpalean
 o Applied Mike's fix for bug [1184376] Sybase getProcedureColumns bug.

04/19/2005 - Alin Sinpalean
 o Major code cleanup using various code inspection tools.

04/17/2005 - Alin Sinpalean