@@ -3,6 +3,8 @@ Changes from jTDS 1.0.3
 
 05/10/2005 - Alin Sinpalean
  o Applied Mike's patch [1197446] Optimized handling of datetime values.
+ o Applied Mike's patch with SQLParser improvements, posted in RFE [1172683] 
+   Improve the performance of Prepared Statements.
  o Applied Mike's fix for bug [1197603] Cursor downgrade error in
    CachedResultSet and added a test case.
 
